--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -129,7 +129,7 @@
     --amber: #ffc000;
     --silver: #bfbfbf;
     --light-gray: #d5d5d5;
-    --cultured:
+    --cultured: #ececec;
 }
 
 * {
@@ -143,7 +143,7 @@ header {
     background-color: black;
     position: fixed;
     align-items: center;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     font-weight: 400;
 }
 
