Add new content box structure and example text

--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -146,13 +146,9 @@ main {
 
 .content-box {
     background-color: var(--silver);
-    width: 70%;
+    width: 100%;
+    max-width: 1200px;
+    flex-grow: 1;
     display: flex;
-    flex-direction: column;
 }
 
-.main-heading {
-    align-self: center;
-    font-weight: 600;
-    font-size: 3rem;
-}
