--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -148,7 +148,25 @@ main {
     background-color: var(--silver);
     width: 100%;
     max-width: 1200px;
-    flex-grow: 1;
     display: flex;
+    flex-direction: column;
 }
 
+.main-heading {
+    font-size: 2.5rem;
+    font-weight: 600;
+    padding: 10px;
+    align-self: center;
+}
+.content {
+    display: flex;
+    width: 100%;
+}
+
+.text {
+    width: 50%;
+}
+
+.img {
+    width: 50%;
+}
