--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -160,21 +160,28 @@ main {
 }
 .content {
     display: flex;
+    flex-direction: column;
     width: 100%;
+}
+
+.text-card {
+    display: flex;
 }
 
 .text {
     width: 50%;
+    display: flex;
+    flex-direction: column;
 }
 
 .subheading {
     font-size: 1.7rem;
-    margin-left: 15px;
+    margin-left: 25px;
 }
 
 .common-text {
-    font-size: 1.2rem;
-    margin-left: 15px;
+    font-size: 1.3rem;
+    margin-left: 25px;
 }
 
 .img {
