Add image placehoder. Alignment and resize still WIP

--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -187,4 +187,13 @@ main {
 
 .img {
     width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.img-placeholder {
+    width: 500px;
+    height: 500px;
+    background-color: var(--indian-yellow);
 }
