Change background colors for content part

--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -146,7 +146,7 @@ main {
 }
 
 .content-box {
-    background-color: var(--silver);
+    background-color: var(--cultured);
     width: 100%;
     max-width: 1200px;
     display: flex;
