--- a/styles/frontpage.css
+++ b/styles/frontpage.css
@@ -82,3 +82,28 @@
   font-family: 'IBM Plex Sans', Arial, Helvetica, sans-serif;
   box-sizing: border-box;
 }
+
+body {
+  max-height: 100vh;
+  max-width: 100vw;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+}
+
+.container {
+  width: 100%;
+  max-width: 1500px;
+  height: 100vh;
+  display: flex;
+}
+
+.text {
+  width: 40%;
+  border: 2px solid green;
+}
+
+.image {
+  width: 60%;
+  border: 2px solid red;
+}
