--- a/styles/frontpage.css
+++ b/styles/frontpage.css
@@ -98,12 +98,34 @@ body {
   display: flex;
 }
 
-.text {
+.text-container {
   width: 40%;
-  border: 2px solid green;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
-.image {
+.text-container > img {
+  max-width: 400px;
+  margin-top: 60px;
+}
+
+.text-container > p { 
+  color: var(--gray);
+  font-size: 1.7rem;
+  font-weight: normal;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+#yellow {
+  color: var(--light-yellow);
+  font-size: 2.5rem;
+  font-weight: 600;
+  margin-bottom: 25px;
+  margin-top: 15px;
+}
+
+.jat-image-container {
   width: 60%;
-  border: 2px solid red;
 }
