--- a/styles/frontpage.css
+++ b/styles/frontpage.css
@@ -76,6 +76,8 @@
   --dark-gray: #bfbfbf;
   --gray: #d5d5d5;
   --light-gray: #ececec;
+  --dark-blue: #66a1ff;
+  --light-blue: #85b4ff;
 }
 
 * {
@@ -127,7 +129,7 @@ body {
 }
 
 a, a:visited {
-  color: var(--light-yellow);
+  color: var(--light-blue);
   font-size: 1.5rem;
   text-decoration: none;
   margin-top: auto;
@@ -135,7 +137,7 @@ a, a:visited {
 }
 
 a:active {
-  color: var(--dark-yellow)
+  color: var(--dark-blue)
 }
 
 .jat-image-container {
