--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -87,7 +87,7 @@ header {
     display: flex;
     min-width: 100vw;
     align-items: center;
-    height: 80px;
+    height: 75px;
     background-color: black;
 }
 
@@ -102,6 +102,8 @@ nav {
 
 .menu {
     margin-right: 15px;
-    color: var(--gray);
+    color: var(--light-gray);
+    font-size: 1.1rem;
+    font-weight: 400;
 }
 
