--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -146,3 +146,20 @@ nav:hover .dropdown-content {
     display: block;
 }
 
+main {
+    position: absolute;
+    top: 75px;
+    background-color: var(--light-gray);
+    min-width: 100vw;
+    min-height: calc(100vh - 75px);
+}
+
+.title {
+    display: flex;
+    justify-content: center;
+}
+
+h1 {
+    font-size: 2rem;
+    font-weight: 600;
+}
