Add better styling to dropdown menu

--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -86,6 +86,9 @@ body {
     position: relative;
 }
 
+/*-------------------------------HEADER--------------------------------*/
+/*---------------------------------------------------------------------*/
+
 header {
     display: flex;
     min-width: 100vw;
@@ -102,12 +105,14 @@ header a img {
 }
 
 .dropbtn {
+    font-family: 'IBM Plex Sans', Helvetica, Arial, sans-serif;
     background-color: black;
     border: none;
     margin-right: 15px;
     color: var(--light-gray);
-    font-size: 1.1rem;
+    font-size: 1.4rem;
     font-weight: 600;
+    padding-right: 0px;
 }
 
 .dropbtn-active{
@@ -118,33 +123,45 @@ nav {
     position: relative;
     display: inline-block;
     margin-left: auto;
-    margin-right: 30px;
 }
 
 .dropdown-content {
     display: none;
     position: absolute;
-    background: rgba(0, 0, 0, 0.7);
-    min-width: 100px;
+    background: rgba(0, 0, 0, 0.6);
+    min-width: 140px;
     z-index: 1;
-    top: 20px;
+    top: 55px;
+    right: 5px;
+    border-radius: 5px;
+    backdrop-filter: blur(5px);
 }
 
 .nav-link {
     display: block;
     color: var(--light-gray);
     text-decoration: none;
-    padding: 8px 0px 8px 4px;
+    padding: 8px 0px 8px 8px;
+    font-size: 1.2rem;
+}
+
+.current {
+    color: var(--dark-yellow);
+    border-radius: 5px;
 }
 
 .nav-link:hover {
     color: var(--dark-yellow);
     background: rgba(0, 0, 0, 0.8);
+    border-radius: 5px;
 }
 
 .display-dropdown {
     display: block;
 }
+
+/*------------------------------CONTENIDO------------------------------*/
+/*---------------------------------------------------------------------*/
 
 main {
     position: absolute;
