--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -102,6 +102,7 @@ header {
 header a img {
     max-width: 80px;
     margin-left: 15px;
+    border-radius: 5px;
 }
 
 .dropbtn {
@@ -132,7 +133,8 @@ nav {
     min-width: 130px;
     z-index: 1;
     top: 55px;
-    right: 5px;
+    left: calc(72px - 100vw);
+    margin-left: 15px;
     border-radius: 5px;
     backdrop-filter: blur(5px);
 }
