--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -130,11 +130,11 @@ nav {
     display: none;
     position: absolute;
     background: rgba(0, 0, 0, 0.7);
-    min-width: 130px;
     z-index: 1;
     top: 55px;
     left: calc(72px - 100vw);
-    margin-left: 15px;
+    width: calc(100vw - 30px);
+    margin: 0px 0px 0px 15px;
     border-radius: 5px;
     backdrop-filter: blur(5px);
 }
@@ -159,7 +159,8 @@ nav {
 }
 
 .display-dropdown {
-    display: block;
+    display: flex;
+    flex-direction: column;
 }
 
 /*------------------------------CONTENIDO------------------------------*/
