--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -102,7 +102,7 @@ header {
 header a img {
     max-width: 80px;
     margin-left: 15px;
-    border-radius: 5px;
+    border-radius: 3px;
 }
 
 .dropbtn {
@@ -129,22 +129,25 @@ nav {
 .dropdown-content {
     display: none;
     position: absolute;
-    background: rgba(0, 0, 0, 0.7);
+    background: rgba(0, 0, 0, 0.8);
     z-index: 1;
-    top: 55px;
+    min-height: 100vh;
+    top: 50px;
     left: calc(72px - 100vw);
-    width: calc(100vw - 30px);
-    margin: 0px 0px 0px 15px;
-    border-radius: 5px;
-    backdrop-filter: blur(5px);
+    width: calc(100vw);
+    backdrop-filter: blur(6px);
 }
 
 .nav-link {
     display: block;
-    color: var(--light-gray);
+    color: white;
     text-decoration: none;
-    padding: 8px 0px 8px 8px;
-    font-size: 1.1rem;
+    padding: 8px 0px 8px 0px;
+    font-size: 1.5rem;
+}
+
+.dropdown-content a:first-child {
+    margin-top: 20px;
 }
 
 .current {
@@ -161,6 +164,8 @@ nav {
 .display-dropdown {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    gap: 8px;
 }
 
 /*------------------------------CONTENIDO------------------------------*/
