--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -111,8 +111,8 @@ header a img {
     border: none;
     margin-right: 15px;
     color: var(--light-gray);
-    font-size: 1.3rem;
-    font-weight: 600;
+    font-size: 1.5rem;
+    font-weight: normal;
     padding-right: 0px;
 }
 
@@ -133,7 +133,7 @@ nav {
     z-index: 1;
     min-height: 100vh;
     top: 50px;
-    left: calc(72px - 100vw);
+    left: calc(79px - 100vw);
     width: calc(100vw);
     backdrop-filter: blur(6px);
 }
@@ -144,10 +144,11 @@ nav {
     text-decoration: none;
     padding: 8px 15px 8px 0px;
     font-size: 1.5rem;
+    font-weight: 300;
 }
 
 .dropdown-content a:first-child {
-    margin-top: 20px;
+    margin-top: 30px;
 }
 
 .current {
