--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -203,6 +203,48 @@ nav {
   }
 }
 
-/*------------------------------CONTENIDO------------------------------*/
+/*------------------------------CONTENT--------------------------------*/
 /*---------------------------------------------------------------------*/
 
+.content {
+    position: absolute;
+    top: 75px;
+    width: 100vw;
+    max-width: 1300px;
+    min-height: calc(100vh - 75px);
+    background-color: var(--light-gray);
+    padding: 0px 5px;
+}
+
+.title {
+    display: flex;
+    justify-content: center;
+}
+
+h1 {
+    font-size: clamp(2rem, 1rem + 3.5vw, 3.5rem);
+    font-weight: 600;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+}
+
+.left {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.subtitle {
+    font-size: 0.95rem;
+}
+
+.chart {
+    width: 350px;
+}
+
+p {
+    font-size: 0.8rem;
+}
