--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -84,6 +84,8 @@
 }
 body {
     position: relative;
+    display: flex;
+    justify-content: center;
 }
 
 /*-------------------------------HEADER--------------------------------*/
