--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -86,6 +86,7 @@ body {
     position: relative;
     display: flex;
     justify-content: center;
+    background-color: var(--light-gray);
 }
 
 /*-------------------------------HEADER--------------------------------*/
