--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -233,3 +233,13 @@ h1 {
     display: flex;
     flex-direction: column;
 }
+
+.subheading {
+    border-bottom: 3px solid var(--dark-yellow);
+    font-size: 1.2rem;
+    padding-bottom: 3px;
+}
+
+p {
+    text-align: justify;
+}
