--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -238,8 +238,26 @@ h1 {
     border-bottom: 3px solid var(--dark-yellow);
     font-size: 1.2rem;
     padding-bottom: 3px;
+    font-weight: 600;
 }
 
-p {
+.card-text > p {
     text-align: justify;
+    font-size: 0.9rem;
 }
+
+.indent {
+    text-indent: 10px;
+}
+
+.lead {
+    font-weight: 600;
+}
+
+li {
+    font-size: 0.9rem;
+    margin: 0px 0px 7px -20px;
+    text-align: justify;
+    font-weight: 600;
+}
+
