--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -261,3 +261,15 @@ li {
     font-weight: 600;
 }
 
+.card-img {
+    display: flex;
+    align-items: center;
+}
+
+.card-img > img{
+    max-width: 600px;
+    width: 99%;
+    margin-bottom: 10px;
+    border: 1px solid black;
+    border-radius: 2px;
+}
