--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -213,7 +213,7 @@ nav {
     position: absolute;
     top: 75px;
     width: 100vw;
-    max-width: 1300px;
+    max-width: 1200px;
     min-height: calc(100vh - 75px);
     background-color: var(--light-gray);
     padding: 0px 15px;
@@ -237,6 +237,13 @@ h1 {
     flex-direction: column;
 }
 
+@media (min-width: 1100px) {
+    .card {
+        flex-direction: row-reverse;
+        gap: 15px;
+    }
+}
+
 .subheading {
     border-bottom: 3px solid var(--dark-yellow);
     font-size: 1.2rem;
@@ -248,7 +255,7 @@ h1 {
 .card-text > p {
     text-align: justify;
     font-size: 0.9rem;
-    max-width: 630px;
+    max-width: 540px;
 }
 
 .indent {
@@ -272,8 +279,8 @@ li {
 }
 
 .card-img > img{
-    max-width: 630px;
     width: 100%;
+    max-width: 540px;
     margin-bottom: 10px;
     border: 1px solid black;
     border-radius: 2px;
