Align image and text on the top

--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -242,6 +242,10 @@ h1 {
         flex-direction: row-reverse;
         gap: 30px;
     }
+
+    .subheading {
+        margin-top: 0px;
+    }
 }
 
 .subheading {
