--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -242,18 +242,20 @@ h1 {
         flex-direction: row-reverse;
         gap: 30px;
     }
-
-    .subheading {
-        margin-top: 0px;
-    }
 }
 
 .subheading {
     border-bottom: 3px solid var(--dark-yellow);
-    font-size: 1.2rem;
+    font-size: clamp(1.2rem, 1rem + 0.7vw, 1.5rem);
     padding-bottom: 3px;
     font-weight: 600;
     text-align: left;
+}
+
+@media (min-width: 1100px) {
+    .subheading {
+        margin-top: 0px;
+    }
 }
 
 .card-text > p {
