--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -261,7 +261,13 @@ h1 {
 .card-text > p {
     text-align: justify;
     font-size: clamp(0.8rem, 0.5rem + 0.55vw, 0.92rem);
-    max-width: 540px;
+    max-width: 750px;
+}
+
+@media (min-width: 1100px) {
+    .card-text > p {
+        max-width: 540px;
+    }
 }
 
 .indent {
@@ -286,8 +292,14 @@ li {
 
 .card-img > img{
     width: 100%;
-    max-width: 540px;
+    max-width: 750px;
     margin-bottom: 10px;
     border: 1px solid black;
     border-radius: 2px;
+}
+
+@media (min-width: 1100px) {
+    .card-img > img {
+        max-width: 540px;
+    }
 }
