--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -304,3 +304,9 @@ li {
         max-width: 540px;
     }
 }
+
+.normal-layout li {
+    list-style-type: none;
+    font-weight: normal;
+    margin: 0px 0px 5px -40px;
+}
