--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -236,10 +236,14 @@ h1 {
 .card {
     display: flex;
     flex-direction: column;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 @media only screen and (min-width: 1100px) {
+    .card {
+        margin-bottom: 30px;
+    }
+
     .reverse-layout {
         flex-direction: row-reverse;
         gap: 30px;
