--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -102,7 +102,7 @@ body {
 .bg {
     position: fixed;
     height: 100vh;
-    min-width: 100%;
+    min-width: 100vw;
     z-index: -1;
     background-image: url();
     background-size: cover;
