--- a/styles/frontpage.css
+++ b/styles/frontpage.css
@@ -80,8 +80,69 @@
   --light-blue: #85b4ff;
 }
 
-* {
-  font-family: 'IBM Plex Sans', Arial, Helvetica, sans-serif;
+html {
   box-sizing: border-box;
+}
+
+*, *::after, *::before {
+  font-family: 'IBM Plex Sans', Arial, Helvetica, sans-serif;
+  box-sizing: inherit;
+}
+
+body {
+  background-color: black;
+  width: 100vw;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+@media only screen and (min-width: 1000px) {
+  body {
+    flex-direction: row-reverse;
+  }
+}
+
+.photo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.photo > img {
+  max-width: 100vw;
+}
+
+.logo-and-text {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 10px;
+  padding: 0px 10px;
+}
+
+.logo-and-text > img {
+  max-width: 50vw;
+}
+
+.text {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.text > h2 {
+  color: var(--dark-yellow);
+  font-weight: 600;
+}
+
+.text > p {
+ color: var(--light-gray);
+}
+
+@media only screen and (min-width: 1000px) {
+  .logo-and-text {
+    flex-direction: column;
+  }
 }
 
