--- a/styles/frontpage.css
+++ b/styles/frontpage.css
@@ -95,6 +95,8 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 @media only screen and (min-width: 1000px) {
