Set max desktop width for card-media in desktop

--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -298,6 +298,9 @@ h1 {
 }
 
 @media only screen and (min-width: 1000px) {
+    .card-text {
+        max-width: 540px;
+    }
     .card-text > p {
         max-width: 540px;
     }
