--- a/styles/contact.css
+++ b/styles/contact.css
@@ -113,7 +113,7 @@ body {
     height: 100vh;
     min-width: 100vw;
     z-index: -1;
-    background-image: url(../../images/background-sand-gs.jpg);
+    background-image: url(../images/background-sand-gs.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-origin: border-box;
@@ -256,4 +256,15 @@ nav {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.title {
+    display: flex;
+    justify-content: center;
+}
+
+.title > h1 {
+    font-size: clamp(2rem, 1rem + 3.5vw, 3.5rem);
+    font-weight: 600;
+    margin-top: 15px;
 }
