--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -132,7 +132,7 @@ header {
     z-index: 1000;
 }
 
-header a img {
+header > a img {
     max-width: 80px;
     margin-left: 15px;
     border-radius: 3px;
