--- a/styles/contact.css
+++ b/styles/contact.css
@@ -245,6 +245,7 @@ nav {
 
 .change-language>img {
     height: 18px;
+    border-radius: 3px;
 }
 
 /*------------------------------CONTENT--------------------------------*/
