--- a/styles/frontpage.css
+++ b/styles/frontpage.css
@@ -89,5 +89,48 @@ html {
   box-sizing: inherit;
 }
 
+body {
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0px 10px;
+  gap: 10px;
+}
 
+.display-picture {
+  max-width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 50px 0px 20px 0px;
+}
 
+.display-picture > img {
+  width: 80%;
+}
+
+.logo-info-container {
+  display: flex;
+  align-items: flex-start;
+  gap: 8px;
+  max-width: 100%;
+}
+
+.logo-full {
+  width: 55%;
+}
+
+.logo-full > img {
+  width: 100%;
+}
+
+.yellow-words {
+  color: var(--light-yellow);
+  font-size: 1.6rem;
+  width: 45%;
+  margin-top: 0px;
+}
+
+.service {
+  display: none;
+}
