--- a/styles/frontpage.css
+++ b/styles/frontpage.css
@@ -94,8 +94,9 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   margin: 0px 10px;
-  gap: 10px;
+  gap: 30px;
 }
 
 .display-picture {
@@ -118,21 +119,46 @@ body {
 
 .logo-full {
   width: 55%;
+  max-width: 330px;
 }
 
 .logo-full > img {
   width: 100%;
 }
 
+.mobile-button-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 45%;
+  max-width: 270px;
+  height: 100%;
+  min-height: 100%;
+}
+
 .yellow-words {
-  color: var(--light-yellow);
+  color: var(--dark-yellow);
   font-size: 1.7rem;
   font-weight: normal;
   line-height: 40px;
-  width: 45%;
+  width: 100%;
   margin-top: -5px;
 }
 
 .service {
+  display: none;
+}
+
+.more-button-mobile {
+  width: 50%;
+  margin-top: 140px;
+  border: none;
+  background-color: black;
+  color: var(--light-yellow);
+  font-weight: normal;
+  font-size: 1.4rem;
+}
+
+.more {
   display: none;
 }
