Fix frontpage layout mobile

--- a/styles/frontpage.css
+++ b/styles/frontpage.css
@@ -90,29 +90,39 @@ html {
 }
 
 body {
+  width: 100vw;
+  max-width: 100vw;
+  height: 100vh;
+  max-height: 100vh;
   background-color: black;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 0px 10px;
-  gap: 30px;
+  padding: 0px 10px;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .display-picture {
-  max-width: 100%;
+  width: 100%;
+  max-width: 600px;
   display: flex;
   justify-content: center;
-  padding: 50px 0px 20px 0px;
 }
 
 .display-picture > img {
-  width: 80%;
+  width: 100%;
 }
 
 .logo-info-container {
   display: flex;
   align-items: flex-start;
+  height: 100%;
   gap: 8px;
   max-width: 100%;
 }
@@ -127,22 +137,21 @@ body {
 }
 
 .mobile-button-container {
+  width: 45%;
+  height: inherit;
+  max-width: 270px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  width: 45%;
-  max-width: 270px;
-  height: 100%;
-  min-height: 100%;
+  justify-content: space-between;
 }
 
 .yellow-words {
   color: var(--dark-yellow);
   font-size: 1.7rem;
   font-weight: normal;
-  line-height: 40px;
+  line-height: 35px;
   width: 100%;
-  margin-top: -5px;
+  margin-top: -7px;
 }
 
 .service {
@@ -151,12 +160,12 @@ body {
 
 .more-button-mobile {
   width: 50%;
-  margin-top: 140px;
   border: none;
   background-color: black;
   color: var(--light-yellow);
   font-weight: normal;
   font-size: 1.4rem;
+  margin-bottom: 2px;
 }
 
 .more {
