--- a/styles/frontpage.css
+++ b/styles/frontpage.css
@@ -90,6 +90,7 @@ html {
 }
 
 body {
+  position: relative;
   width: 100vw;
   max-width: 100vw;
   height: 100vh;
@@ -258,5 +259,20 @@ body {
   .more-button-desktop > img {
     width: 32px;
     margin-top: 5px;
+  }
+}
+
+.change-language {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 20px;
+  height: 20px;
+}
+
+@media only screen and (min-width: 1000px) {
+  .change-language {
+    width: 30px;
+    height: 30px;
   }
 }
