--- a/styles/index.css
+++ b/styles/index.css
@@ -217,7 +217,7 @@ body {
   }
 }
 
-.more-button-mobile {
+.more-link-mobile {
   width: 50%;
   border: none;
   background-color: black;
@@ -226,14 +226,15 @@ body {
   font-size: 1.4rem;
   margin-bottom: 2px;
   align-self: center;
+  text-decoration: none;
 }
 
-.more-button-mobile > img {
+.more-link-mobile > img {
   width: 30px;
 }
 
 @media only screen and (min-width: 1100px) {
-  .more-button-mobile {
+  .more-link-mobile {
     display: none;
   }
 }
@@ -248,7 +249,7 @@ body {
     margin-top: auto;
   }
 
-  .more-button-desktop {
+  .more-link-desktop {
     border: none;
     background-color: black;
     color: var(--light-yellow);
@@ -256,9 +257,10 @@ body {
     font-size: 1.4rem;
     display: flex;
     align-items: center;
+    text-decoration: none;
   }
 
-  .more-button-desktop > img {
+  .more-link-desktop > img {
     width: 32px;
     margin-top: 5px;
   }
