--- a/styles/index.css
+++ b/styles/index.css
@@ -209,7 +209,6 @@ body {
 @media only screen and (min-width: 1100px) {
   .service {
     display: block;
-    /*font-size: 1.2rem;*/
     font-size: clamp(1rem, 0.7826rem + 0.3478vw, 1.2rem);
     margin-bottom: 0px;
   }
@@ -225,6 +224,8 @@ body {
   margin-bottom: 2px;
   align-self: center;
   text-decoration: none;
+  display: flex;
+  justify-content: center;
 }
 
 .more-link-mobile > img {
